--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>snw.jkook</groupId>
-    <artifactId>example</artifactId>
+    <groupId>snw</groupId>
+    <artifactId>hypixelbot</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -17,6 +17,10 @@
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>Hypixel</id>
+            <url>https://repo.hypixel.net/repository/Hypixel/</url>
         </repository>
     </repositories>
 
@@ -32,6 +36,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.36</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.hypixel</groupId>
+            <artifactId>hypixel-api-transport-reactor</artifactId>
+            <version>4.2.1</version>
         </dependency>
     </dependencies>
 
