Add GSON 2.9 (depends on KookBC! So this maybe won't work on other JKook implementations)

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>net.hypixel</groupId>
             <artifactId>hypixel-api-transport-reactor</artifactId>
             <version>4.2.1</version>
